@@ -21,7 +21,7 @@ public class OriginalFinder {
     }
 
     public static void main(String[] args) {
-        List<Integer> input1 = Arrays.asList(1, 2, 2, 3, 4, 5, 5, 6);
+        List<Integer> input1 = List.of(1, 2, 2, 3, 4, 5, 5, 6);
 
         System.out.println(findOriginal(input1));
 
